# hibana-wasip1-runtime

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: wasi_std_shell_app.rs
examples/direct_choreofs_write_rejection/: main.rs  shell_env.rs
examples/sequenced_choreofs_write/: main.rs  shell_env.rs
examples/wasi_shell_demo_lib/: error.rs  transport.rs
scripts/: check_runtime_gates.sh  check_runtime_residue.sh  check_wasi_shell_demo.sh
src/: choreofs.rs  exchange.rs  features.rs  lib.rs  wasip1.rs
src/engine/wasm/: machine.rs  mod.rs
src/protocol/: mod.rs  wasi.rs
